--- a/FPTBook/Views/Book/BookDetail.cshtml
+++ b/FPTBook/Views/Book/BookDetail.cshtml
@@ -1,12 +1,18 @@
 ﻿@model FPTBook.Models.Book
 <div class="card mb-3">
-  <h3 class="card-header">@Model.Name</h3>
+    <h3 class="card-title">CATEGORY</h3>
+  <h5 class="card-header">@Model.Name</h5>
   <div class="card-body">
-    <h5 class="card-title">CATEGORY</h5>
-  </div>
-  <img src="https://th.bing.com/th/id/R.aa808ac97c488ec73c8612ea3428edc0?rik=2%2fiOE%2fdVk2kllg&pid=ImgRaw&r=0" width=100% height="1000px"/>
+    
+  </div >
+  <img src="https://radiotruyen.info/upload/cover/thumbnail_wm/Bao-Mong-Truyen-Ma-Kinh-Di.jpg"  text-align: center; width=50% height="500px"/>
   <div class="card-body">
-    <p class="card-text">DESCRIPTION: Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">DESCRIPTION: </p>
+    <p>Truyện ma có thể là bất kỳ tác phẩm hư cấu, hoặc vở kịch nào đề cập đến ma, hoặc chỉ đơn giản là lấy làm tiền đề cho khả năng ma có thật hoặc niềm tin của nhân vật về sự tồn tại của chúng. "Ma" có thể tự xuất hiện hoặc được triệu hồi bằng phép thuật. Ma thường liên kết với quan niệm "ma ám", tức là hiện tượng một thực thể siêu nhiên gắn liền với địa điểm, đồ vật hoặc con người nào đó.
+
+Nói một cách thông tục, thuật ngữ "truyện ma" có thể đề cập đến bất kỳ loại truyện đáng sợ nào. Theo nghĩa hẹp hơn, truyện ma đã được phát triển thành một dạng truyện ngắn, thuộc thể loại hư cấu. Mặc dù truyện ma thường rõ ràng có chủ đích là hù dọa độc giả, nhưng chúng có thể được viết để phục vụ mọi nhu cầu, từ tấu hài cho đến câu chuyện về đạo đức. Ma thường xuất hiện trong truyện kể với vai trò là lính gác hoặc tiên tri cho những sự kiện sắp xảy ra. Niềm tin về ma xuất hiện ở mọi nền văn hóa trên thế giới, và do đó truyện ma có thể lưu truyền dưới dạng truyền khẩu hoặc văn viết.</p>
+  <div>
+  <img src="https://i.ytimg.com/vi/VM03KHkVXuc/maxresdefault.jpg"  text-align: center; width=50% height="500px"/>
   </div>
   <div class="card-body">
     <a asp-area="" asp-controller="Book" asp-action="Index"class="card-link">Back to Home</a>
