--- a/FPTBook/Views/Home/Index.cshtml
+++ b/FPTBook/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1  class="display-4"> <i> FPT GREENWICH BOOK STORE </i> </h1>
+
+    <img width= "80%" height= "10%" src = "https://mir-s3-cdn-cf.behance.net/project_modules/1400/ff0a3c103434243.5f6ba1947039e.png" />
+
+    
+    <p>Learn <a style = "font-family : Fantasy" href="https://greenwich.edu.vn/en/english/">About Greenwich</a>.</p>
 </div>
