--- a/FPTBook/Views/Home/Privacy.cshtml
+++ b/FPTBook/Views/Home/Privacy.cshtml
@@ -1,7 +1,17 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "ABOUT US";
 }
 <h1>@ViewData["Title"]</h1>
 
+<p>HA NOI </p>
+<p>Golden Park Tower, 
+2 Pham Van Bach, Yen Hoa, Cau Giay, Hanoi
+<br />
+Telephone: 024.7300.2266
+<br />
+Hotline: 0971.274.545 | 0981558080</p>
+
+
 <p>FPTBook</p>
-<p>0919088999</p>
+<p>Learn <a style = "font-family : Fantasy" href="https://greenwich.edu.vn/en/english/">About Greenwich</a>.</p>
+
