--- a/FPTBook/Views/Book/Index.cshtml
+++ b/FPTBook/Views/Book/Index.cshtml
@@ -1,15 +1,18 @@
 ﻿@model ICollection<FPTBook.Models.Book>
 
-    <h1>
+    <h1 style = "font-family : Fantasy">
         Book View
     </h1>
+        <h2 class="text-center"><button asp-controller="Book" asp-action= "Add" type="button" class="btn btn-outline-info">Add Book</button></h2>
+        
+    <br />
     <table class="table table-hover ">
     <tr class="table-secondary">
         <th>Book Id</th>
         <th>Book Name</th>
         <th>Book Price</th>
         <th>Book Title</th>
-         <th>Actions</th>
+         <th class="text-center">Actions</th>
     </tr>
     @foreach (var book in Model)
    {
@@ -18,8 +21,20 @@
             <td ><a asp-area="" asp-controller="Book" asp-action="BookDetail" asp-route-id="@book.Id" class="card-link" > <p style="color:black;">@book.Name</p></a></td>
              <td>@book.Price VND</td>
               <td>@book.Title</td>
-              <td><button type="button" class="btn btn-danger">Delete</button>
-<button type="button" class="btn btn-success">Update</button></td>
+
+              <td>
+                           <a asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">
+                                <img src="https://th.bing.com/th/id/OIP.sC_KrynSg1RnXXm0NEmZawHaHa?w=174&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" width="50" height="40" />
+                           </a>
+                           <a asp-controller="Book" asp-action="Delete" asp-route-id="@book.Id"
+                           onclick="return confirm('Are you sure to delete this book ?')"
+                           >
+                                <img src="https://th.bing.com/th/id/OIP.biPca-1335_ZK48PpgxM4gHaHa?w=176&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" width="50" height="40" />
+                           </a>
+                   </td>
+              
+
        </tr>
    }
+
 </table>    
