--- a/FPTBook/Views/Book/Index.cshtml
+++ b/FPTBook/Views/Book/Index.cshtml
@@ -22,7 +22,7 @@
              <td>@book.Price VND</td>
               <td>@book.Title</td>
 
-              <td>
+              <td class="text-center">
                            <a asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">
                                 <img src="https://th.bing.com/th/id/OIP.sC_KrynSg1RnXXm0NEmZawHaHa?w=174&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" width="50" height="40" />
                            </a>
@@ -31,6 +31,7 @@
                            >
                                 <img src="https://th.bing.com/th/id/OIP.biPca-1335_ZK48PpgxM4gHaHa?w=176&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" width="50" height="40" />
                            </a>
+                           
                    </td>
               
 
