--- a/FPTBook/Views/Book/Add.cshtml
+++ b/FPTBook/Views/Book/Add.cshtml
@@ -7,15 +7,21 @@
 
 
         <div class="form-group">
-            <label class="text text-info">Book Title</label>
-            <input class="form-control" asp-for="Title" />
-            <span class="text text-danger" asp-validation-for="Title"></span>
+            <label class="text text-info">Book Name</label>
+            <input class="form-control" asp-for="Name" />
+            <span class="text text-danger" asp-validation-for="Name"></span>
         </div>
 
         <div class="form-group">
             <label class="text text-info">Book Price</label>
             <input class="form-control" asp-for="Price" />
             <span class="text text-danger" asp-validation-for="Price"></span>
+        </div>
+
+        <div class="form-group">
+            <label class="text text-info">Book Title</label>
+            <input class="form-control" asp-for="Title" />
+            <span class="text text-danger" asp-validation-for="Title"></span>
         </div>
 
         <div class="form-group">
@@ -31,7 +37,7 @@
 
 
         <div class="form-group">
-            <input class="btn btn-success" type="submit" value="AddBook">
+            <input class="btn btn-success" type="submit" value="Add">
         </div>
          
     </form>
