--- a/FPTBook/Views/Book/Index.cshtml
+++ b/FPTBook/Views/Book/Index.cshtml
@@ -3,7 +3,7 @@
     <h1 style = "font-family : Fantasy">
         Book View
     </h1>
-        <h2 class="text-center"><button asp-controller="Book" asp-action= "Add" type="button" class="btn btn-outline-info">Add Book</button></h2>
+        <h2 class="text-center"><a asp-controller="Book" asp-action= "Add" type="button" class="btn btn-outline-info">Add Book</a></h2>
         
     <br />
     <table class="table table-hover ">
